[tool.poetry]
name = "intercom-party"
version = "0.1.0"
description = ""
authors = ["Wicker25 <wicker25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
